# rtaspi

./: .flatedit.logs.txt  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DONE.md  MANIFEST.in  Makefile  README.md  TODO.md  TODO.txt  TODO2.md  audio_config.yaml  config.yaml  debug_imports.py  dependency_analysis.json  flatedit.txt  main.py  pipeline_config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  rtaspi.config.yaml  rtaspi.devices.yaml  rtaspi.pipeline.yaml  rtaspi.streams.yaml  run_examples.py  server_config.yaml  setup.cfg  setup.py  start.sh  test_imports.py  tox.ini  version.sh
.rtaspi/: config.yaml
docs/: API.md  CLI.md  CONCEPTS.md  CONFIGURATION.md  DEVELOPMENT.md  EXAMPLES.md  INSTALL.md  PROJECTS.md  PROJECTS_LOCAL.md  QUICKSTART.md  README.md  SCRIPTS.md  SPEECH_AND_INPUT.md  TEST.md  TREE.md
docs/POST/PL/: 1.md
docs/devices/: README.md
examples/: README.md
examples/automation/: README.md  home_assistant.py  mqtt_example.py  rules.json  rules_example.py  scheduled_tasks.py
examples/basic/: README.md  camera_stream.py  device_discovery.py  microphone_recording.py
examples/commands/: README.md  keyboard_commands.json
examples/config/: README.md  enum_overrides.yaml  project.config.yaml  rtaspi.config.yaml  user.config.yaml
examples/dev/: README.md  advanced_examples.py  basic_examples.py  integration_examples.py
examples/devices/: README.md
examples/edu/: README.md  advanced_motion_detection.py  basic_camera_stream.py  motion_detection_monitor.py  pipeline_examples.py
examples/embedded/: README.md
examples/industrial/: README.md  modbus_config.yaml  opcua_config.yaml
examples/iot/: README.md  home_assistant_config.yaml  mobile_app.js  mqtt_integration.py  smart_doorbell.py
examples/pipelines/: README.md  audio_config.yaml  audio_processing.py  face_detection.py  motion_detection.py  object_tracking.py  pipeline_config.yaml
examples/pro/: README.md  advanced_camera_stream.py  device_automation.py  industrial_integration.py  security_system.py
examples/saas/: README.md  content_creation.py  image_processing.py  monitoring_system.py  video_conference.py
examples/security/: README.md  alarms_config.yaml  behavior_config.yaml
examples/speech/: README.md
examples/webserver/: README.md  generate_certs.sh  https_server.py  matrix_config.yaml  matrix_view.py  rest_api.py  server_config.yaml  webrtc_streaming.py
fedora/: python.sh
install/: README.md  SPACY.md  pyaudio.py  pyaudio.sh  pyaudio2.py  pyaudio2.sh  pyaudio3.sh  pyaudiodiag.py  pyautogui.md  pyautogui.py  spacy.sh  windows.ps1
rtaspi-modular/: .gitignore  README.md  TODO.md  TODO.txt  pyproject.toml
rtaspi-modular/rtaspi-core/: README.md  pyproject.toml  pytest.ini
rtaspi-modular/rtaspi-core/rtaspi_core/: __init__.py
rtaspi-modular/rtaspi-core/rtaspi_core/config/: __init__.py  manager.py  models.py
rtaspi-modular/rtaspi-core/rtaspi_core/mcp/: __init__.py  client.py
rtaspi-modular/rtaspi-core/tests/: conftest.py
rtaspi-modular/rtaspi-core/tests/config/: test_manager.py  test_models.py
rtaspi-modular/rtaspi-devices/: README.md  pyproject.toml
rtaspi-modular/rtaspi-devices/docs/: advanced_usage.md  architecture.md  components.md  configuration.md  index.md
rtaspi-modular/rtaspi-devices/docs/network/: README.md  advanced_usage.md  components.md
rtaspi-modular/rtaspi-devices/examples/: README.md
rtaspi-modular/rtaspi-devices/examples/basic_usage/: quick_start.py  simple_example.py
rtaspi-modular/rtaspi-devices/examples/integrations/: cross_module.py
rtaspi-modular/rtaspi-devices/examples/network/: advanced_discovery.py  device_discovery.py
rtaspi-modular/rtaspi-devices/rtaspi_devices/: __init__.py
rtaspi-modular/rtaspi-devices/rtaspi_devices/base/: __init__.py  device.py  manager.py
rtaspi-modular/rtaspi-devices/rtaspi_devices/discovery/: __init__.py  base.py  scanner.py
rtaspi-modular/rtaspi-devices/rtaspi_devices/events/: __init__.py
rtaspi-modular/rtaspi-devices/rtaspi_devices/local/: __init__.py  manager.py
rtaspi-modular/rtaspi-devices/rtaspi_devices/network/: __init__.py  device.py  manager.py  monitor.py
rtaspi-modular/rtaspi-devices/rtaspi_devices/protocols/: __init__.py  base.py
rtaspi-modular/rtaspi-devices/tests/: conftest.py  test_examples.py
rtaspi-modular/rtaspi-devices/tests/network/: test_device.py  test_manager.py  test_monitor.py
scripts/: configure_hardware.ps1  configure_hardware.sh  install_fedora.sh  install_macos.sh  install_models.sh  install_ubuntu.sh  install_windows.ps1  optimize_rpi.sh  publish.sh  setup_service.sh
service/: start.sh  stop.sh
src/rtaspi/: __init__.py  __init__.py.bak  __main__.py  _version.py  _version.py.bak  main.py
src/rtaspi/api/: __init__.py  devices.py  pipelines.py  server.py  streams.py
src/rtaspi/automation/: hass.py  mqtt.py  rules.py
src/rtaspi/cli/: shell.py
src/rtaspi/constants/: __init__.py  camera.py  detection.py  devices.py  filters.py  logging.py  outputs.py  protocols.py  resolutions.py  streaming.py
src/rtaspi/core/: __init__.py  config.py  defaults.py  enums.py  logging.py  mcp.py  rtaspi.py  utils.py
src/rtaspi/device_managers/: __init__.py  base.py  command_handler.py  local_devices.py  network_devices.py  stream_manager.py
src/rtaspi/dsl/: __init__.py  executor.py  lexer.py  parser.py
src/rtaspi/input/: command_processor.py  keyboard.py
src/rtaspi/processing/: __init__.py  pipeline_executor.py
src/rtaspi/quick/: __init__.py  camera.py  microphone.py  utils.py
tests/: conftest.py  test_audio_filters.py  test_command_processor.py  test_discovery.py  test_dsc.py  test_hass.py  test_honeywell.py  test_intercom.py  test_keyboard.py  test_local_devices.py  test_modbus.py  test_motion.py  test_mqtt.py  test_network_devices.py  test_opcua.py  test_remote_desktop.py  test_remote_desktop_manager.py  test_sip.py  test_speech_recognition.py  test_streaming.py  test_video_filters.py  test_vnc.py  test_window_capture.py
update/: pip.sh  requirements.sh
version/: README.md  project.py  src.py
(+68 files in other folders)
