[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rtaspi"
version = "0.1.13"
description = "Real-Time Annotation and Stream Processing"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pyyaml>=6.0",
    "psutil>=5.9.0",
    "requests>=2.28.0",
    "urllib3>=1.26.9",
    "websockets>=10.3",
    "upnpclient>=1.0.3",
    "zeroconf>=0.38.1",
    "wsdiscovery>=2.0.0",
    "opencv-python>=4.6.0",
    "numpy>=1.22.3",
    "Pillow>=9.1.0",
    "pytest>=7.1.2",
    "pytest-cov",
    "pyaudio",
    "onvif-zeep",
]