[metadata]
name = rtaspi
version = attr: rtaspi.__version__
description = Real-Time Annotation and Stream Processing Interface
long_description = file: README.md
long_description_content_type = text/markdown
author = Tom Sapletta
author_email = info@softreck.dev
url = https://rtaspi.rtasp.com
license = Apache-2.0
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    pytest-asyncio>=0.21.0

[options.packages.find]
where = src
include = rtaspi*

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = --verbose --cov=rtaspi --cov-report=term-missing
pythonpath = src
norecursedirs = .git build dist *.egg-info
asyncio_mode = strict
asyncio_default_fixture_loop_scope = function
markers =
    unit: mark a test as a unit test
    integration: mark a test as an integration test
    discovery: tests for device discovery functionality
    streaming: tests for streaming functionality
    devices: tests for device management
    asyncio: tests requiring async functionality

[coverage:run]
source = rtaspi

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if __name__ == .__main__.:

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
